jenkins/Jenkins-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: public.ecr.aws/m6k9s1m7/jenkins-agent:K12-runtime
        ports:
        - containerPort: 8080
